--- a/react-firebase-login/public/index.html
+++ b/react-firebase-login/public/index.html
@@ -10,6 +10,7 @@
       crossorigin="anonymous" 
     />
     <link rel="stylesheet" href="./styles.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
