--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,13 @@
       crossorigin="anonymous" 
     />
     <link rel="stylesheet" href="./styles.css" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <!-- Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
+      rel="stylesheet"
+    />
+    <script src="https://maps.googleapis.com/maps/api/js?key={process.env.REACT_APP_GOOGLE_MAPS_API_KEY}"></script>
+
   </head>
   <body>
     <div id="root"></div>
