--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
       rel="stylesheet"
     />
-    <script src="https://maps.googleapis.com/maps/api/js?key={process.env.REACT_APP_GOOGLE_MAPS_API_KEY}"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=${process.env.REACT_APP_GOOGLE_MAPS_API_KEY}"></script>
 
   </head>
   <body>
